--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.tabSize": 2,
-	"css.customData": [".vscode/css_custom_data.json"]
+	"css.customData": [".vscode/css_custom_data.json"],
+	"testing.automaticallyOpenPeekView": "never"
 }
